V6994:Added Missing Component on P350 and some other fixes

--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L0/Pages/L0_P355.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L0/Pages/L0_P355.xaml
@@ -21,8 +21,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="62" Color="Water" StatusComponent="L0+355-01-EC1" Canvas.Left="995" Canvas.Top="734" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="978" Canvas.Top="714" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="62" Color="Water" StatusComponent="L0+355-01-ME1" Canvas.Left="995" Canvas.Top="734" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-ME1" Canvas.Left="978" Canvas.Top="714" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -57,25 +57,25 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="83" Color="Water" StatusComponent="L0+363-31-CV1" Canvas.Left="908" Canvas.Top="490" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
-        <Labels:Pipe Color="Water" Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="1038" Canvas.Top="391" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-ME1" Canvas.Left="1038" Canvas.Top="391" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="246" StatusComponent="L0+355-01-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1079" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
-        <Labels:Pipe Color="Water" Width="146" StatusComponent="L0+355-01-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1337" Canvas.Top="350" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="250" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="1357" Canvas.Top="474" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="246" StatusComponent="L0+355-01-ME1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1079" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
+        <Labels:Pipe Color="Water" Width="146" StatusComponent="L0+355-01-ME1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1337" Canvas.Top="350" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="250" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-ME1" Canvas.Left="1357" Canvas.Top="474" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="591" Color="Water" StatusComponent="L0+355-01-EC1" Canvas.Left="892" Canvas.Top="587" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
-        <Labels:Pipe Width="48" Color="Water" StatusComponent="L0+355-01-EC1" Canvas.Left="831" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="18" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="868" Canvas.Top="579" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="591" Color="Water" StatusComponent="L0+355-01-ME1" Canvas.Left="892" Canvas.Top="587" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="48" Color="Water" StatusComponent="L0+355-01-ME1" Canvas.Left="831" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="18" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-ME1" Canvas.Left="868" Canvas.Top="579" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -223,7 +223,7 @@
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="396" Canvas.Top="706" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="109" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="505" Canvas.Top="362" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_Agitator Canvas.Left="480" Canvas.Top="460" Height="22" Width="52" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="L0+355-01-EC1" Canvas.Left="833" Canvas.Top="734" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L0+355-01-ME1" Canvas.Left="833" Canvas.Top="734" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L0+355-71-ES1" Canvas.Left="1079" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L0+357-32-CV1" Canvas.Left="1289" Canvas.Top="624" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L0+357-33-CV1" Canvas.Left="1289" Canvas.Top="717" HorizontalAlignment="Left" VerticalAlignment="Center"/>
