--- a/Prevu.Synoptics.V6994_Lyondell_Basell/WaterView.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/WaterView.xaml
@@ -22,14 +22,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="124" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-44-FT1" Canvas.Left="1128" Canvas.Top="731" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="96" StatusComponent="L0+355-01-EC1" Canvas.Left="2479" Canvas.Top="851" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="96" StatusComponent="L0+357-31-CV1" Canvas.Left="2479" Canvas.Top="851" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="2525" Canvas.Top="805" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-31-CV1" Canvas.Left="2525" Canvas.Top="805" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="26" RenderTransformOrigin="0.5,0.5" Canvas.Left="2447" Canvas.Top="731" StatusComponent="L2+464-21-CV2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="38" StatusComponent="L2+464-21-CV2" Canvas.Left="2452" Canvas.Top="748" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -373,8 +373,8 @@
         <Labels:Pipe Color="Water" Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-44-FT1" Canvas.Left="203" Canvas.Top="879" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
         <Labels:Pipe Color="Water" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+340-32-CV1" Canvas.Left="152" Canvas.Top="792" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="57" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+340-32-CV1" Canvas.Left="200" Canvas.Top="792" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="28" Color="Water" StatusComponent="L0+355-01-EC1" Canvas.Left="414" Canvas.Top="929" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="396" Canvas.Top="916" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="28" Color="Water" StatusComponent="L0+355-01-ME1" Canvas.Left="414" Canvas.Top="929" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-ME1" Canvas.Left="396" Canvas.Top="916" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -403,8 +403,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="314" Color="Water" StatusComponent="L0+355-01-EC1" Canvas.Left="362" Canvas.Top="974" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="344" Canvas.Top="962" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="314" Color="Water" StatusComponent="L0+357-31-CV1" Canvas.Left="362" Canvas.Top="974" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-31-CV1" Canvas.Left="344" Canvas.Top="962" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -419,30 +419,30 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="863" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="672" Canvas.Top="559" Icon="Right" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="840" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="1794" Canvas.Top="559" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Color="Water" Width="240" StatusComponent="L0+355-01-EC1" Canvas.Left="2512" Canvas.Top="686" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="863" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-31-CV1" Canvas.Left="672" Canvas.Top="559" Icon="Right" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="840" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-31-CV1" Canvas.Left="1794" Canvas.Top="559" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe Color="Water" Width="240" StatusComponent="L0+357-31-CV1" Canvas.Left="2512" Canvas.Top="686" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="372" StatusComponent="L0+355-01-EC1" Canvas.Left="488" Canvas.Top="752" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="372" StatusComponent="L0+357-31-CV1" Canvas.Left="488" Canvas.Top="752" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="28" StatusComponent="L0+355-01-EC1" Canvas.Left="660" Canvas.Top="961" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="28" StatusComponent="L0+357-31-CV1" Canvas.Left="660" Canvas.Top="961" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="240" StatusComponent="L0+355-01-EC1" Canvas.Left="1412" Canvas.Top="686" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+355-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="240" StatusComponent="L0+357-31-CV1" Canvas.Left="1412" Canvas.Top="686" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+355-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -498,7 +498,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="253" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="1530" Canvas.Top="569" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="253" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-31-CV1" Canvas.Left="1530" Canvas.Top="569" VisibilityComponent="L0+355-33-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+340-31-CV1" Canvas.Left="320" Canvas.Top="848" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -542,14 +542,14 @@
         <Labels:Pipe Color="Water" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+380-21-CV1" Canvas.Left="1542" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="185" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+310-44-FT1" Canvas.Left="1590" Canvas.Top="477" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+380-21-CV1" Canvas.Left="1789" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="96" StatusComponent="L0+355-01-EC1" Canvas.Left="1379" Canvas.Top="851" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L0+355-32-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Color="Water" Width="96" StatusComponent="L0+357-31-CV1" Canvas.Left="1379" Canvas.Top="851" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L0+355-32-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+355-01-EC1" Canvas.Left="1425" Canvas.Top="805" VisibilityComponent="L0+355-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1"/>
+        <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-31-CV1" Canvas.Left="1425" Canvas.Top="805" VisibilityComponent="L0+355-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1"/>
         <Labels:Pipe Color="Water" Width="26" RenderTransformOrigin="0.5,0.5" Canvas.Left="1347" Canvas.Top="731" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="L1+464-21-CV2"/>
         <Labels:Pipe Color="Water" Width="38" StatusComponent="L1+464-21-CV2" Canvas.Left="1352" Canvas.Top="748" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
