--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Details/L2_D160.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Details/L2_D160.xaml
@@ -9,17 +9,17 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.L2_D160">
-    <Canvas Height="345" Width="441">
-        <Machines:V01_SCW_ScrewFlat_wHopper Canvas.Left="21" Canvas.Top="100" Height="232" Width="407" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_Radar Canvas.Left="40" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_Radar Canvas.Left="100" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_Radar Canvas.Left="158" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_Radar Canvas.Left="216" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_Radar Canvas.Left="274" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="L2+160-41-LT1" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="12" Canvas.Top="10"/>
-        <Labels:DeviceLabel ComponentName="L2+160-41-LT2" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="72" Canvas.Top="123"/>
-        <Labels:DeviceLabel ComponentName="L2+160-41-LT3" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="130" Canvas.Top="10"/>
-        <Labels:DeviceLabel ComponentName="L2+160-41-LT4" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="188" Canvas.Top="123"/>
-        <Labels:DeviceLabel ComponentName="L2+160-41-LT5" Canvas.Left="248" Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Canvas Height="283" Width="490">
+        <Machines:V01_NT_BunkerBelt_wDrum Canvas.Left="8" Canvas.Top="73" Height="213" Width="472" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_Radar Canvas.Left="45" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_Radar Canvas.Left="105" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_Radar Canvas.Left="162" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_Radar Canvas.Left="221" Canvas.Top="67" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_Radar Canvas.Left="275" Canvas.Top="65" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L2+160-41-LT1" Canvas.Left="17" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L2+160-41-LT2" Canvas.Left="77" Canvas.Top="125" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L2+160-41-LT3" Canvas.Left="134" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L2+160-41-LT4" Canvas.Left="193" Canvas.Top="125" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L2+160-41-LT5" Canvas.Left="249" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
